# projeto-p1

./: LICENSE  README.md  pyproject.toml
src/conway_package/: .Main.py.swp  conway_grid.py  conway_system.py  main.py  traceback.txt
