[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "conway_package"
version = "0.0.1"
authors = [{name="Guilherme Arruda",email="guilherme.duarte.de.arruda@ccc.ufcg.com" },]

  description = "Reconstrução do projeto de P1 e LP1 de guilherme.arruda"
  readme = "README.md"
  requires-python = ">=3.9"
  classifiers = [
      "Programming Language :: Python :: 3",
          "Operating System :: OS Independent",
          ]
          license = "MIT"
          license-files = ["LICEN[CS]E*"]

          [project.urls]
          Homepage = "https://github.com/pypa/sampleproject"
          Issues = "https://github.com/pypa/sampleproject/issues"
